Bug 1778439 - Don't assert whether an evaluation error has been set in the shell's ModuleObject.evaluationError getter r=arai

This makes this return undefined if there has been no error set, in line with
the other shell getters.

Differential Revision: https://phabricator.services.mozilla.com/D151227